<resources>
    <string name="tablet_id" translatable="false">ID:</string>
    <string name="app_name" translatable="false">SoyMomo Tablet/Phone - Parent</string>
    <string name="dug_cyberbullying_label" translatable="false">Cyberbullying</string>
    <string name="dug_grooming_label" translatable="false">Grooming</string>
    <string name="_0" translatable="false">0</string>
    <string name="ok" translatable="false">OK</string>
    <string name="dummy_app_name" translatable="false">Google Chrome</string>
    <string name="dummy_detection_date" translatable="false">30/10/2018 22:00</string>
    <string name="dummy_tablet_model" translatable="false">Pro</string>
    <string name="_00h_00m" translatable="false">00h:00m</string>
    <string name="lite_model_name" translatable="false">Lite</string>
    <string name="lite_2_model_name" translatable="false">Lite 2.0</string>
    <string name="lite_3_model_name" translatable="false">Lite 3.0</string>
    <string name="pro_model_name" translatable="false">Pro</string>
    <string name="pro_2_model_name" translatable="false">Pro 2.0</string>
    <string name="uno_model_name" translatable="false">Uno</string>
    <string name="momophone_1_model_name" translatable="false">MomoPhone 1.0</string>
    <string name="unknown_model_name" translatable="false">-</string>
    <string name="none" translatable="false">None</string>
    <string name="explicit_songs_artist" translatable="false">%1$s - %2$s</string>
    <string name="onboarding_select_language_title_carousel" translatable="false">Select the language / Selecciona el idioma / Sprache auswählen / Sélectionnez la langue</string>
    <string name="notification_explicit_music_detection_config_title" translatable="false">SoyMomo Device</string>
    <string name="hours">hours</string>
    <string name="login">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="hint_mail">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="unknown_tablet_name">No Name</string>
    <string name="adblocker_no_ads">No ads have been blocked yet!</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="create_account">Create account</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="hint_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="invalid_login_fields">Invalid username or password</string>
    <string name="tos_error">There was an error accepting the terms and conditions</string>
    <string name="tos_must_accept">You must accept the terms and conditions</string>
    <string name="title_my_tablets">My Devices</string>
    <string name="title_profile">Profile</string>
    <string name="title_add_tablet">Link</string>
    <string name="edit_profile">Change details</string>
    <string name="save_changes">Change e-mail</string>
    <string name="change_password">Change your password</string>
    <string name="new_password">New password</string>
    <string name="save_new_password">Change password</string>
    <string name="scan">Scan</string>
    <string name="add_tablet_qr_text">Go to the parents section on your SoyMomo device and press Settings to find the QR code. Then scan it to link the SoyMomo device to your account.</string>
    <string name="add_tablet_manually_text">Go to the parents section on your SoyMomo device and press Settings. Below the QR code, you will find an alphanumeric code with uppercase and lowercase letters. Enter that code below to link the SoyMomo device to your account.</string>
    <string name="enter_manual_code">Enter the code</string>
    <string name="title_app_usage">App Usage</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="usage">Usage</string>
    <string name="protection">Protection</string>
    <string name="websites">Web</string>
    <string name="schedules">Schedules</string>
    <string name="utils">Settings</string>
    <string name="change_pin">Change PIN</string>
    <string name="app_protection">App Protection</string>
    <string name="website_protection">Website Protection</string>
    <string name="block_explorer">Block Browser</string>
    <string name="switch_block_browser">Enable Browser</string>
    <string name="usage_hours">Usage Hours</string>
    <string name="notification">No notifications found</string>
    <string name="loading_error">An error occurred while loading the information</string>
    <string name="login_success">Welcome</string>
    <string name="login_error">There was an error logging in</string>
    <string name="creation_error">There was an error creating your account</string>
    <string name="account_exist">This account already exists</string>
    <string name="app_protection_desc">Block the apps you don\'t want your child to use</string>
    <string name="tutorial_title_welcome">Welcome</string>
    <string name="tutorial_title_pin">Security PIN</string>
    <string name="tutorial_title_app_protection">App Blocking</string>
    <string name="tutorial_title_website_protection">Website Protection</string>
    <string name="tutorial_title_usage_hours">Schedule Control</string>
    <string name="tutorial_title_smart_detection"><b>Dug</b>: Dangerous Content Detector</string>
    <string name="tutorial_welcome_description">Welcome to your SoyMomo parent application. From here you can link a SoyMomo device and set configurations remotely</string>
    <string name="tutorial_pin_description">pin?</string>
    <string name="tutorial_app_protection_description">Set which apps are allowed for your children, and block those that may be potentially dangerous</string>
    <string name="tutorial_website_protection_description">Specify which websites you want your child to visit</string>
    <string name="tutorial_usage_hours_description">Configure the schedules during which you want your child to use the SoyMomo device</string>
    <string name="tutorial_smart_detection_description">
        A new friend has joined SoyMomo! Meet <b>Dug</b>, trained to seek and find content that may be inappropriate for children.\n\n
        Sometimes browsing the internet or interacting with strangers can result in negative experiences. But don\'t worry, <b>Dug</b> will prevent such situations, guiding safe use of the web, social networks, and digital content. We care for you!</string>
    <string name="button_back_text">Back</string>
    <string name="button_next_text">Next</string>
    <string name="button_ready_text">Done</string>
    <string name="usage_hour">USAGE SCHEDULE</string>
    <string name="time_not_defined">hh:mm</string>
    <string name="usage_hours_title_range">Time Range %1$d</string>
    <string name="usage_hours_title_limit">Time Limit %1$d</string>
    <string name="usage_hours_range_from">From: </string>
    <string name="usage_hours_range_to">To: </string>
    <string name="usage_hours_limit">Limit: </string>
    <string name="usage_hours_chip_placeholder">Configure</string>
    <string name="usage_hours_menu_delete">Delete</string>
    <string name="snackbar_text_request_time">Confirmation sent</string>
    <string name="tablet_name">Name:</string>
    <string name="loading">Loading</string>
    <string name="loading_app_usages">Loading apps</string>
    <string name="total_app_usage">Total usage time:</string>
    <string name="hour">hours</string>
    <string name="minute">minutes</string>
    <string name="second">seconds</string>
    <string name="set_pin">Change PIN</string>
    <string name="toast_error_no_email">Please enter your email.</string>
    <string name="progress_resetting_password">Resetting password…</string>
    <string name="toast_error_account_does_not_exist">No account exists with that email</string>
    <string name="toast_error_recovering_password">Could not recover password</string>
    <string name="toast_password_recovered_success">Password successfully recovered. Check your email in a few minutes</string>
    <string name="button_logout">Log out</string>
    <string name="text_personal_information">Personal Information</string>
    <string name="menu_search">Search</string>
    <string name="menu_this_week">THIS WEEK</string>
    <string name="menu_today">TODAY</string>
    <string name="change_email">Change E-Mail</string>
    <string name="set_new_mail">Set a new E-Mail</string>
    <string name="new_mail">New E-Mail</string>
    <string name="confirm_mail">Confirm E-Mail</string>
    <string name="set_new_password">Set a new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="error_invalid_mail">Enter a valid e-mail</string>
    <string name="error_confirm_mail">Please confirm your e-mail</string>
    <string name="error_mails_dont_match">E-mails do not match</string>
    <string name="changing_mail">Changing e-mail</string>
    <string name="email_changed">e-mail changed</string>
    <string name="error_invalid_password">Please enter a password of at least 6 characters</string>
    <string name="error_confirm_password">Please confirm the password</string>
    <string name="error_passwords_dont_match">Passwords do not match</string>
    <string name="changing_password">Changing password</string>
    <string name="error_changing_password">Error changing password</string>
    <string name="password_changed">Password has been changed</string>
    <string name="invalid_mail">invalid e-mail</string>
    <string name="mail_taken">e-mail already exists</string>
    <string name="email_generic_error">error changing e-mail</string>
    <string name="app_usage_placeholder">Last used: %1$s</string>
    <string name="chart_loading_apps">Loading apps</string>
    <string name="chart_other_apps">Others</string>
    <string name="interval_day_text">Today</string>
    <string name="interval_week_text">This week</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="total_use_time">Total usage time:\n%1$s</string>
    <string name="app_protection_enabled_app">%1$s enabled</string>
    <string name="app_protection_disabled_app">%1$s disabled</string>
    <string name="edittext_error_first_name">Please enter your first name.</string>
    <string name="edittext_error_last_name">Please enter your last name.</string>
    <string name="edittext_error_email">Please enter a valid e-mail.</string>
    <string name="edittext_error_password">Please enter a password of at least 6 characters</string>
    <string name="changing_personal_informartion">Changing personal information</string>
    <string name="personal_information_changed">Information changed</string>
    <string name="menu_app_protection">Apps</string>
    <string name="menu_app_time">Schedules</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_usage_stats">Usage</string>
    <string name="menu_website_protection">Websites</string>
    <string name="today_interval">Today</string>
    <string name="this_week_interval">This week</string>
    <string name="this_month_interval">This month</string>
    <string name="all_time_interval">All time</string>
    <string name="monday_initial">Mon</string>
    <string name="tuesday_initial">Tue</string>
    <string name="wednesday_initial">Wed</string>
    <string name="thursday_initial">Thu</string>
    <string name="friday_initial">Fri</string>
    <string name="saturday_initial">Sat</string>
    <string name="sunday_initial">Sun</string>
    <string name="settings_button_save">Save</string>
    <string name="settings_button_delete">Delete</string>
    <string name="card_use_limit_title">Usage limits</string>
    <string name="card_use_range_title">Usage ranges</string>
    <string name="card_use_limit_hours_quantity">Number of hours:</string>
</resources>