<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_app_usage"
        android:icon="@drawable/bullet_list"
        android:title="@string/menu_usage_stats"/>
    <item
        android:id="@+id/action_app_protection"
        android:icon="@drawable/shield"
        android:title="@string/menu_app_protection"/>
    <item
        android:id="@+id/action_website_protection"
        android:icon="@drawable/web"
        android:title="@string/menu_website_protection"/>
    <item
        android:id="@+id/action_usage_hours"
        android:icon="@drawable/clock"
        android:title="@string/menu_app_time"/>
    <item
        android:id="@+id/change_pin"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/menu_settings"/>
</menu>